--- a/README
+++ b/README
@@ -1,4 +1,8 @@
-  __  __      ____   _  _____   _   ___  
+# About
+This is an upated version of Mcpat version 1.0 to run on Sniper. By applying the patch of Sniper, and fixing some compiler error/warnings.
+
+# Mcpat Readme
+__  __      ____   _  _____   _   ___  
  |  \/  | ___|  _ \ / \|_   _| / | / _ \ 
  | |\/| |/ __| |_) / _ \ | |   | || | | |
  | |  | | (__|  __/ ___ \| |   | || |_| |
